--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .inputItem{
-    padding-left: 1%;
     position: relative;
     display: inline-block;
     height: 5%;
     width: 25%;
     font-size: 30px;
-    border-radius: 30px;
+    border-radius: 5px;
     outline: none;
-    box-shadow: #000000;
-    border-color: #BDBDBD;
+    text-align: center;
+    border-color: #D3D0CB;
+
 }
 
 .inputQnty{
@@ -17,8 +17,11 @@
     height: 5%;
     width: 5%;
     font-size: 30px;
-    border-radius: 30px;
+    border-radius: 5px;
     outline: none;
+    text-align: center;
+    border-color: #D3D0CB;
+
 }
 
 .submit{
@@ -26,7 +29,9 @@
     width: 10%;
     height: 5%;
     font-size: 30px;
-    border-radius: 30px;
-    background-color: aqua;
+    border-radius: 5px;
+    background-color: #44BBA4;
+    border-color: #44BBA4;
     outline: none;
+    color: #ffffff;
 }
