--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+:root{
+  font-size: 1rem;
+}
+
 table, td {
     border: 1px solid black;
     padding: 15px;
@@ -64,4 +68,50 @@ table, td {
   background:  black;
   height: 80vh;
   display: inline-block;
+}
+
+.dashDiv {
+  font-size: 1.5rem;
+}
+
+#headingInput{
+  border: 1px solid gray;
+  padding-left: 2%;
+  justify-content: center;
+  align-items: center;
+  /* border-radius: 10px; */
+  
+}
+
+#predictorColumn{
+  display: flex;
+  height: 60vh;
+  /* justify-content: space-around; */
+  width: 80%;
+  margin-top: 25px;
+  background-color: #fff;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+#immediateRequirement{
+  border: 1px solid #01CBDC;
+  border-radius: 5px;
+  float: left;
+  height: 100%;
+  width: 40%;
+  padding: 20px;
+  margin-right: 15px;
+}
+
+#mightNeed{
+  float: right;
+}
+
+#immediateRequirementList{
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  overflow: scroll;
+  height: 95%;
 }
