--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -85,7 +85,7 @@ table, td {
 
 #predictorColumn{
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   height: 60vh;
   /* justify-content: space-around; */
   width: 100%;
@@ -101,7 +101,7 @@ table, td {
   border-radius: 5px;
   float: left;
   height: 100%;
-  width: 40%;
+  width: 60%;
   padding: 20px;
   margin-right: 15px;
 }
@@ -112,7 +112,11 @@ table, td {
   border-radius: 5px;
   margin-right: 15px;
   padding: 20px;  
-  width: 60%;
+  width: 40%;
+}
+
+#req{
+  float: right;
 }
 
 #immediateRequirementList{
