--- a/scr/css/style.css
+++ b/scr/css/style.css
@@ -8,6 +8,14 @@
   font-size: 1rem;
 }
 
+  html,
+  body {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+  }
+
 table, td {
     border: 1px solid black;
     padding: 15px;
@@ -41,10 +49,23 @@ table, td {
 .navBar{
   /* position: relative; */
   display: flex;
+  flex-direction: column;
   width: 20%;
   justify-content: center;
   float: left;
   border: 1px solid #01CBDC;
+}
+
+#addItems{
+  padding-top:1rem ;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  padding-left: 2rem;
+}
+
+#billPage{
+  margin-left: 1rem;
 }
 
 .dashBody{
